# ica2tcp

./: README.md
citrix_sdk_files/vcsdk_linux64/include/: basetype.h  citrix.h  clterr.h  cmacro.h  ctxdebug.h  ctxlog.h  ctxnevt.h  ctxntmr.h  cwire.h  dllapi.h  engtypes.h  host_os.h  hosttype.h  icaconst.h  libmgr.h  logapi.h  logflags.h  mainloop.h  miapi.h  plat.h  platcall.h  platcomm.h  platfix.h  platsys.h  plattool.h  subwindow.h  utilmacros.h  vd.h  vdapi.h  wdapi.h
citrix_sdk_files/vcsdk_linux64/include/shared/: ica-c2h.h  vrtlclss.h
citrix_sdk_files/vcsdk_win32/include/: Api_HpcCallTable.h  citrix.h  clib.h  clibcomm.h  clterr.h  cmacro.h  ctxdebug.h  ctxfeatures.h  ctxgraph.h  ctxwnd.h  cwire.h  dllapi.h  engtypes.h  icaconst.h  libmgr.h  logapi.h  logflags.h  miapi.h  plat.h  platcall.h  platclib.h  platcomm.h  platid.h  platsys.h  plattool.h  sslerr.h  utilmacros.h  vd.h  vdapi.h  wcecalls.h  wdapi.h
citrix_sdk_files/vcsdk_win32/include/shared/: ica-c2h.h  ica.h  icaid.h  vrtlclss.h
citrix_sdk_files/vcsdk_win32/lib/: vdapi.lib
citrix_sdk_files/wfapi_sdk_win32/include/: CtxSmcApi.h  wfapi.h
citrix_sdk_files/wfapi_sdk_win32/lib/: wfapi.lib
client_dll_linux/: CMakeLists.txt  README.md  connection_manager.c  connection_manager.h  debug.c  debug.h  debug_extern.h  errors.h  ica_queue.c  ica_queue.h  socket_queue.c  socket_queue.h  vdsocks_v2.c  vdsocks_v2.h
common/: common.h
server/: CMakeLists.txt  README.md  connection_manager_win.c  connection_manager_win.h  ctxsocks_v2.c  ctxsocks_v2.h  debug_win.c  debug_win.h  dyn_array.c  dyn_array.h  errors_win.h  queue_win.c  queue_win.h  server_multithread.c  server_multithread.h  socket_queue_win.c  socket_queue_win.h
